Source/WebCore/platform/graphics/filters/FilterEffect.cpp
@@ -43,6 +43,8 @@ FilterEffect::FilterEffect(Filter* filter)
     , m_hasWidth(false)
     , m_hasHeight(false)
     , m_clipsToBounds(true)
+    , m_colorSpace(ColorSpaceLinearRGB)
+    , m_resultColorSpace(ColorSpaceDeviceRGB)
 {
     ASSERT(m_filter);
 }
@@ -104,8 +106,13 @@ void FilterEffect::apply()
         in->apply();
         if (!in->hasResult())
             return;
+
+        // Convert input results to the current effect's color space.
+        in->transformResultColorSpace(m_colorSpace);
     }
+
     determineAbsolutePaintRect();
+    m_resultColorSpace = m_colorSpace;
 
     if (!isFilterSizeValid(m_absolutePaintRect))
         return;
@@ -188,7 +195,7 @@ ImageBuffer* FilterEffect::asImageBuffer()
         return 0;
     if (m_imageBufferResult)
         return m_imageBufferResult.get();
-    m_imageBufferResult = ImageBuffer::create(m_absolutePaintRect.size(), 1, ColorSpaceLinearRGB, m_filter->renderingMode());
+    m_imageBufferResult = ImageBuffer::create(m_absolutePaintRect.size(), 1, m_resultColorSpace, m_filter->renderingMode());
     IntRect destinationRect(IntPoint(), m_absolutePaintRect.size());
     if (m_premultipliedImageResult)
         m_imageBufferResult->putByteArray(Premultiplied, m_premultipliedImageResult.get(), destinationRect.size(), destinationRect, IntPoint());
@@ -325,7 +332,7 @@ ImageBuffer* FilterEffect::createImageBufferResult()
     ASSERT(!hasResult());
     if (m_absolutePaintRect.isEmpty())
         return 0;
-    m_imageBufferResult = ImageBuffer::create(m_absolutePaintRect.size(), 1, ColorSpaceLinearRGB, m_filter->renderingMode());
+    m_imageBufferResult = ImageBuffer::create(m_absolutePaintRect.size(), 1, m_colorSpace, m_filter->renderingMode());
     if (!m_imageBufferResult)
         return 0;
     ASSERT(m_imageBufferResult->context());
@@ -354,6 +361,32 @@ Uint8ClampedArray* FilterEffect::createPremultipliedImageResult()
         return 0;
     m_premultipliedImageResult = Uint8ClampedArray::createUninitialized(m_absolutePaintRect.width() * m_absolutePaintRect.height() * 4);
     return m_premultipliedImageResult.get();
+}
+
+void FilterEffect::transformResultColorSpace(ColorSpace dstColorSpace)
+{
+#if USE(CG)
+    // CG handles color space adjustments internally.
+    UNUSED_PARAM(dstColorSpace);
+#else
+    if (!hasResult() || dstColorSpace == m_resultColorSpace)
+        return;
+
+    // FIXME: We can avoid this potentially unnecessary ImageBuffer conversion by adding
+    // color space transform support for the {pre,un}multiplied arrays.
+    if (!m_imageBufferResult) {
+        asImageBuffer();
+        ASSERT(m_imageBufferResult);
+    }
+
+    m_imageBufferResult->transformColorSpace(m_resultColorSpace, dstColorSpace);
+    m_resultColorSpace = dstColorSpace;
+
+    if (m_unmultipliedImageResult)
+        m_unmultipliedImageResult.clear();
+    if (m_premultipliedImageResult)
+        m_premultipliedImageResult.clear();
+#endif
 }
 
 TextStream& FilterEffect::externalRepresentation(TextStream& ts, int) const
