Source/WebCore/platform/graphics/filters/SourceGraphic.h
@@ -48,6 +48,7 @@ private:
     SourceGraphic(Filter* filter)
         : FilterEffect(filter)
     {
+        setColorSpace(ColorSpaceDeviceRGB);
     }
 };
 
